# eol-tracker

./: .gitignore  CMakeLists.txt  LICENSING.md  README.md  package.json  similarityFlowchart.dia  webpack.config.js
js/: timeline.js
lib/: CMakeLists.txt
lib/cmake/: FindLibDNF.cmake
lib/data/: CentOS.repo  Fedora.repo  openSUSE 42.3.repo  openSUSE.repo
lib/include/: Chroot.hpp  OperatingSystem.hpp  Package.hpp  Project.hpp  RepoScan.hpp  Version.hpp
lib/src/: OperatingSystem.cpp  Package.cpp  Project.cpp  RepoScan.cpp  Version.cpp
root/static/: similarity.html
root/static/css/: timeline.css
root/templates/: base.html  collections.html  distros.html  issues.html  oses.html  projects.html  view.html
src/: CMakeLists.txt  UpdateThread.cpp  UpdateThread.h  config.cpp  config.h  dependencies.cpp  dependencies.h  frontend.cpp  frontend.h  issues.cpp  issues.h  main.cpp  oses.cpp  oses.h  root.cpp  root.h  settings.cpp  settings.h
